Bug 373678: qnamepart should not set isXML. r=brendan